--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.4.0",
     "react-image-file-resizer": "^0.4.8",
     "react-loading": "^2.0.3",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.14",
